<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KyivSmartCity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_your_name">Введите свое имя:</string>
    <string name="your_name">Ваше имя.</string>
    <string name="enter_your_phone">Введите свой номер телефона.</string>
    <string name="your_phone">Ваш номер телефона.</string>
    <string name="save_data">Сохранить</string>
    <string name="call_emergency">Вызвать скорую</string>
    <string name="preferences">Preferences</string>
    <string name="location_services_disabled">Отключены сервисы поиска локации. Включите их, пожалуйста.</string>
    <string name="enable_location_service">Включить сервисы локации.</string>
    <string name="please_choose_your_location">Пожалуйста, укажите свое местоположение.</string>
    <string name="submit_location">Подвердить местоположение.</string>

</resources>
