<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
        >

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/enter_your_name"
            />
    <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            />

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/enter_your_phone"
            />
    <EditText
            android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/your_phone"
            android:phoneNumber="true"
            />

    <Button
            android:id="@+id/save_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_data"
            android:layout_gravity="right"
            />
</LinearLayout>